Refactor the block patterns to accept and test for inverted cases. Refactor the CreatureBuildListener to check for inverted cases